# OpenClassrooms-DA-P10-D-tectez-des-faux-billets-avec-R-ou-Python

./: README.md  kmeans_model.pkl  logreg_model.pkl  program.ipynb
Detectez_des_faux_billets_avec_r_ou_python_ludovic_lafon/: ludovic_lafon_code.ipynb
python-data/: pyproject.toml
