[tool.poetry]
name = "python-data"
version = "0.1.0"
description = ""
authors = ["Alto <lafon.ludovic.ll@proton.me>"]
readme = "README.md"
packages = [{include = "python_data"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scipy = { version = "^1.11.2", python = ">=3.10,<3.13" }
scikit-learn = "^1.3.0"
yellowbrick = "^1.5"
ipykernel = "^6.25.1"
jupyter = "^1.0.0"
notebook = "^7.0.2"
ipython = "^8.14.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
